--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "bankai": "^9.15.3",
+    "gh-pages": "^3.1.0",
     "standard": "^16.0.3"
   },
   "dependencies": {
